// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render set mix options correctly 1`] = `
<div class="fx-tab no--scroll">
  <ul class="fx-tab_list">
    <li class="fx-tab_item fx-vertical-hairline active">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline active-next">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
  </ul>
</div>
`;

exports[`Tab should render set options correctly 1`] = `
<div class="fx-tab">
  <ul class="fx-tab_list">
    <li class="fx-tab_item fx-vertical-hairline active">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline active-next">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <fx-badge-stub class="fx-tab_item-inner"></fx-badge-stub>
      <!--v-if-->
    </li>
  </ul>
</div>
`;
